New ViewController with login, adedd progress bar

--- a/imageApp/Base.lproj/Main.storyboard
+++ b/imageApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Cu5-vG-51e">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xld-RN-hge">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -229,6 +229,119 @@
             </objects>
             <point key="canvasLocation" x="-318.32061068702291" y="-15.492957746478874"/>
         </scene>
+        <!--Auth View Controller-->
+        <scene sceneID="rxZ-Il-bOg">
+            <objects>
+                <viewController id="t5q-Kj-CrS" customClass="AuthViewController" customModule="imageApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Kby-w9-aAi">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="auth_screen_logo" translatesAutoresizingMaskIntoConstraints="NO" id="KD0-k1-bLP">
+                                <rect key="frame" x="166.66666666666666" y="430.66666666666669" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="2p0-ro-3VF"/>
+                                    <constraint firstAttribute="width" constant="60" id="gmM-3p-hrg"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LFl-OK-cex">
+                                <rect key="frame" x="16" y="680" width="361" height="48"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="pLI-5W-IP9"/>
+                                </constraints>
+                                <color key="tintColor" red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Войти"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="16"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <segue destination="cdr-tA-rsy" kind="show" identifier="ShowWebView" id="7rN-js-J5w"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="OJ1-3b-6Uv"/>
+                        <color key="backgroundColor" red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="LFl-OK-cex" firstAttribute="centerX" secondItem="Kby-w9-aAi" secondAttribute="centerX" id="Bdh-jk-jrg"/>
+                            <constraint firstItem="OJ1-3b-6Uv" firstAttribute="bottom" secondItem="LFl-OK-cex" secondAttribute="bottom" constant="90" id="P3A-2g-tp2"/>
+                            <constraint firstItem="LFl-OK-cex" firstAttribute="leading" secondItem="OJ1-3b-6Uv" secondAttribute="leading" constant="16" id="fNz-9I-3jM"/>
+                            <constraint firstItem="KD0-k1-bLP" firstAttribute="centerY" secondItem="OJ1-3b-6Uv" secondAttribute="centerY" id="ipV-gV-ZlO"/>
+                            <constraint firstItem="OJ1-3b-6Uv" firstAttribute="trailing" secondItem="LFl-OK-cex" secondAttribute="trailing" constant="16" id="nUx-h4-qCA"/>
+                            <constraint firstItem="KD0-k1-bLP" firstAttribute="centerX" secondItem="OJ1-3b-6Uv" secondAttribute="centerX" id="xsa-e3-MV1"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="AhJ-iB-SpK"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xbh-2A-6se" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="608.39694656488552" y="688.73239436619724"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="CHb-j8-TEQ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xld-RN-hge" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="NDJ-De-GdB">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="t5q-Kj-CrS" kind="relationship" relationship="rootViewController" id="zSR-k0-gmj"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E3o-k6-ijB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-318.32061068702291" y="688.73239436619724"/>
+        </scene>
+        <!--Web View View Controller-->
+        <scene sceneID="7ds-7a-4w3">
+            <objects>
+                <viewController id="cdr-tA-rsy" customClass="WebViewViewController" customModule="imageApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="d6Y-Ca-Vf7">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aWj-w3-87e">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Q1x-3s-AKr">
+                                <rect key="frame" x="0.0" y="103" width="393" height="4"/>
+                                <color key="tintColor" red="0.1019607843" green="0.1058823529" blue="0.1333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </progressView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="BkK-9H-EcM"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="aWj-w3-87e" secondAttribute="trailing" id="B7L-vw-0dO"/>
+                            <constraint firstItem="Q1x-3s-AKr" firstAttribute="top" secondItem="BkK-9H-EcM" secondAttribute="top" id="Iy3-LE-euy"/>
+                            <constraint firstItem="Q1x-3s-AKr" firstAttribute="leading" secondItem="BkK-9H-EcM" secondAttribute="leading" id="akz-7U-cut"/>
+                            <constraint firstItem="aWj-w3-87e" firstAttribute="top" secondItem="d6Y-Ca-Vf7" secondAttribute="top" id="dJx-Th-zOh"/>
+                            <constraint firstItem="aWj-w3-87e" firstAttribute="leading" secondItem="d6Y-Ca-Vf7" secondAttribute="leading" id="keQ-XU-RXd"/>
+                            <constraint firstAttribute="bottom" secondItem="aWj-w3-87e" secondAttribute="bottom" id="sLN-3o-sea"/>
+                            <constraint firstItem="BkK-9H-EcM" firstAttribute="trailing" secondItem="Q1x-3s-AKr" secondAttribute="trailing" id="uJj-as-QHt"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="rah-DV-vaS"/>
+                    <connections>
+                        <outlet property="WebView" destination="aWj-w3-87e" id="ANh-Cx-kvu"/>
+                        <outlet property="progressView" destination="Q1x-3s-AKr" id="yRH-4K-1F6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZMO-RP-KD1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1511" y="689"/>
+        </scene>
     </scenes>
     <resources>
         <image name="0" width="1600" height="1059"/>
@@ -236,7 +349,11 @@
         <image name="Backward" width="24" height="24"/>
         <image name="Like" width="42" height="42"/>
         <image name="Sharing 1" width="51" height="51"/>
+        <image name="auth_screen_logo" width="60" height="60"/>
         <image name="tab_editorial_active" width="30" height="30"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="tableBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
