--- a/imageApp/Base.lproj/Main.storyboard
+++ b/imageApp/Base.lproj/Main.storyboard
@@ -89,6 +89,7 @@
                             <constraint firstItem="GSw-xT-2PE" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="yZV-5M-1TC"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="5Kp-Q1-3sN"/>
                     <navigationItem key="navigationItem" id="2WF-Cb-KUz"/>
                     <connections>
                         <outlet property="tableView" destination="GSw-xT-2PE" id="shS-sV-KiO"/>
@@ -97,7 +98,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="608.39694656488552" y="-15.492957746478874"/>
+            <point key="canvasLocation" x="-318" y="-6"/>
         </scene>
         <!--Profile View Controller-->
         <scene sceneID="sAG-Au-5ot">
@@ -183,7 +184,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G9Q-rk-VVy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1512" y="-15"/>
+            <point key="canvasLocation" x="526" y="-6"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Rsn-HN-PCT">
@@ -200,40 +201,18 @@
                         </tabBarAppearance>
                     </tabBar>
                     <connections>
-                        <segue destination="eEz-n1-MwG" kind="relationship" relationship="viewControllers" id="C1n-7x-RZo"/>
                         <segue destination="Sxy-YF-5ff" kind="relationship" relationship="viewControllers" id="bfY-Pw-Bal"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="iB8-Lu-ZZk"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Ch-75-VSe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1187" y="-287"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="B7e-ex-E1H">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="eEz-n1-MwG" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="tab_editorial_active" id="eU4-Th-Cdx"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="eNy-wY-r27">
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <navigationBarAppearance key="standardAppearance">
-                            <color key="backgroundColor" red="0.1019607843" green="0.1058823529" blue="0.1333333333" alpha="1" colorSpace="calibratedRGB"/>
-                        </navigationBarAppearance>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ko9-wX-Q9d"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ZRX-4h-l4c" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-318.32061068702291" y="-15.492957746478874"/>
-        </scene>
         <!--Auth View Controller-->
         <scene sceneID="rxZ-Il-bOg">
             <objects>
-                <viewController id="t5q-Kj-CrS" customClass="AuthViewController" customModule="imageApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AuthViewControllerID" id="t5q-Kj-CrS" customClass="AuthViewController" customModule="imageApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Kby-w9-aAi">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -346,7 +325,7 @@
         <!--Splash View Controller-->
         <scene sceneID="oKj-h8-W8c">
             <objects>
-                <viewController id="30v-ef-vyq" customClass="SplashViewController" customModule="imageApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SplashViewController" id="30v-ef-vyq" customClass="SplashViewController" customModule="imageApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Mhk-3v-J8X">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -380,7 +359,6 @@
         <image name="Sharing 1" width="51" height="51"/>
         <image name="auth_screen_logo" width="60" height="60"/>
         <image name="splash_logo" width="75" height="78"/>
-        <image name="tab_editorial_active" width="30" height="30"/>
         <namedColor name="YPBlack">
             <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
