--- a/imageApp/Base.lproj/Main.storyboard
+++ b/imageApp/Base.lproj/Main.storyboard
@@ -89,7 +89,7 @@
                             <constraint firstItem="GSw-xT-2PE" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="yZV-5M-1TC"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="5Kp-Q1-3sN"/>
+                    <tabBarItem key="tabBarItem" title="" image="tab_editorial_active" id="5Kp-Q1-3sN"/>
                     <navigationItem key="navigationItem" id="2WF-Cb-KUz"/>
                     <connections>
                         <outlet property="tableView" destination="GSw-xT-2PE" id="shS-sV-KiO"/>
@@ -201,8 +201,8 @@
                         </tabBarAppearance>
                     </tabBar>
                     <connections>
-                        <segue destination="Sxy-YF-5ff" kind="relationship" relationship="viewControllers" id="bfY-Pw-Bal"/>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="iB8-Lu-ZZk"/>
+                        <segue destination="Sxy-YF-5ff" kind="relationship" relationship="viewControllers" id="ZwP-wV-Hwg"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Ch-75-VSe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -359,6 +359,7 @@
         <image name="Sharing 1" width="51" height="51"/>
         <image name="auth_screen_logo" width="60" height="60"/>
         <image name="splash_logo" width="75" height="78"/>
+        <image name="tab_editorial_active" width="30" height="30"/>
         <namedColor name="YPBlack">
             <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
